Changed to command run